# concurrencpp-X

./: .gitignore  CMakeLists.txt
docs/: InterviewHighlights.md  awaiters_troubleshooting.md  net_module_interview_script.md  tcp_echo_server_memory_leak_fix.md  workflow-api.md  workflow-design.md  workflow_resume_interview.md
docs/workflow/: 00_overview.md  01_model.md  02_api.md  03_scheduling.md  04_coroutines.md  05_examples.md  06_integration_plan.md  07_concurrency_patterns.md  08_mapping_to_workflow.md  README.md
example/: CMakeLists.txt
example/17_workflow_simple_dag/: CMakeLists.txt
example/17_workflow_simple_dag/source/: main.cpp
example/http_client/: CMakeLists.txt
example/http_client/source/: main.cpp
example/http_server/: CMakeLists.txt
example/http_server/source/: main.cpp
example/tcp_echo_server/: CMakeLists.txt
example/tcp_echo_server/source/: main.cpp
include/concurrencpp/: concurrencpp.h  errors.h
include/concurrencpp/net/: asio.hpp  asio_coro_util.hpp  asio_util.hpp  client.hpp  constants.h  io_context_pool.hpp  server.hpp
include/concurrencpp/net/http/: connection.hpp  http_client.hpp  http_request.hpp  http_response.hpp  http_server.hpp
include/concurrencpp/results/: when_result.h
include/concurrencpp/runtime/: constants.h  io_context_pool.hpp  runtime.h
include/concurrencpp/workflow/: executor.h  module.h  param.h  workflow.h
source/executors/: thread_pool_executor.cpp
source/runtime/: runtime.cpp
source/workflow/: executor.cpp  module.cpp
test/: CMakeLists.txt
test/source/tests/: workflow_executor_tests.cpp
